# wolfpack

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE.md  README.md  default.nix  install  install.cmd  install.ps1  packages.nix  shell.nix  test  test.ps1
.github/workflows/: cmake-multi-platform.yml  nix-build.yml
example/: CMakeLists.txt
tests/01/: CMakePresets.json
tests/02/: CMakeLists.txt  main.cpp  wolfpack.json
wolfpack/: CMakeLists.txt  config_reader.cpp  config_reader.hpp  json_config_reader.cpp  json_config_reader.hpp  utils.cpp  utils.hpp  wolfpack_cli.cpp
